# secom-ix-devops

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
app/: docker-compose.yml  form.py  main.py  pyproject.toml
app/.github/workflows/: test-deploy.yml  test.yml
app/templates/: basic-layout.html  contact.jinja2  error.jinja2  imc_calc.jinja2  imc_result.jinja2  index.jinja2  layout.html
app/tests/: test_imc.py
