[tool.poetry]
name = "secom-app"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]
readme = "README.md"
packages = [{include = "secom_app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
